--- a/templates/login.html
+++ b/templates/login.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-BR">
 
 <head>
     <meta charset="UTF-8">
@@ -11,30 +11,22 @@
 
 <body>
     <main class="container">
-        <form>
+        <form action="/login" method="POST">
             <h1>Login</h1>
             <div class="input-box">
-                <input placeholder="Username" type="email">
+                <input name="email" placeholder="Nome" type="email">
                 <i class="bx bxs-user"></i>
             </div>
 
             <div class="input-box">
-                <input placeholder="Password" type="password">
+                <input name="password" placeholder="Senha" type="password">
                 <i class="bx bxs-lock-alt"></i>
-            </div>
-
-            <div class="remember-forgot">
-                <label>
-                    <input type="checkbox">
-                    Remember me
-                </label>
-                <a href="#">Forgot Password?</a>
             </div>
 
             <button type="submit" class="login">Login</button>
 
             <div class="register-link">
-                <p>Don't have an account? <a href="cadastro.html">Register</a></p>
+                <p>Não tem uma conta? <a href="/cadastro">Cadastre-se</a></p>
             </div>
         </form>
 
