--- a/templates/home.html
+++ b/templates/home.html
@@ -8,10 +8,10 @@
 </head>
 <body id="home">
   
-  <header class="titulo">
+  <header>
     <div>
-      <h1>Bem-vindo à TechStore</h1>
-      <p>Os produtos que você ama estão aqui!</p>
+      <h1>TechStore</h1>
+      <h2>Os Melhores Produtos estão aqui!</h2>
     </div>
 
     <nav>
