--- a/templates/index.html
+++ b/templates/index.html
@@ -10,15 +10,11 @@
 <div class="pagina_inicial">
 
 <header class="botoes">
-    <h1>Bem-vindo</h1>
+    <h1>TechStore</h1>
     <a href="/login" class="button">Você tem uma conta?</a>
     <a href="/cadastro" class="button">Não tem uma conta?</a>
 </header>
 
-
-<footer>
-    <p>&copy;2024 - 2025 | Todos os direitos reservados</p>
-</footer>
 
 </div>
 </body>
