--- a/static/styles.css
+++ b/static/styles.css
@@ -149,52 +149,144 @@ body {
   transform: translateY(0); /* Retorna à posição original ao clicar */
 }
 
-div.pagina_inicial {
-  display: flex;
-  flex-direction: column;
-  justify-content: flex-end;
-  height: 100vh;
-}
 
-header.botoes {
-  margin-bottom: 100%;
-}
-
-div.produto {
-  background-color: rgba(255, 255, 255, 0.616);
-  border-radius: 10px;
-  color: #ad00c4;
-}
-
-section.produtos {
-  display: flex;
-  gap: 20px;
-}
+/* CSS HOME */
 
 header {
+  top: 0;
+  left: 0;
+  width: 100%;
   display: flex;
   justify-content: space-between;
   align-items: center;
+  padding: 20px 40px; /* aumentei o espaçamento lateral */
+  z-index: 1000;
+  font-family: "Poppins", sans-serif;
 }
 
-header h1 {
-  font-size: 1.5rem;
+.header-logo {
+  display: flex;
+  align-items: center;
+}
+
+.header-logo h1 {
+  margin-left: 10px;
+  font-size: 1.8rem;
+}
+
+.nav {
+  display: flex;
+  list-style: none;
+}
+
+.nav li a {
+  margin-left: 20px;
+  text-decoration: none;
+  transition: 0.2s ease-in-out;
+  color: #fff;
   font-weight: 500;
 }
 
-
-body#home {
-  justify-content: space-around;
+.nav li a:hover {
+  color: #ad00c4;
 }
 
-nav {
+
+.logo_principal {
+  height: 350px; /* Tamanho da imagem */
+  width: auto; /* Regula o tamanho automaticamente */
+}
+
+.CTA {
   display: flex;
-  list-style: none;
-  position: relative;
-  left: 80%;
+  justify-content: center;
+  align-items: center;
+  height: 60vh;
+  margin-top: 100px; /* ou o quanto precisar para não esconder o conteúdo */
 }
 
-nav > a {
-  margin-left: 20px;
-  text-decoration: none;
+.main-text {
+  font-size: 1.5rem;
+  margin: 20px 0;
+  width: 500px;
+  margin-left: 100px;
+}
+
+.main-text h1 span {
+  color: #e560ff;
+}
+
+.dc_btn {
+  background-color: transparent;
+  border: #ad00c4 2px solid;      /* ou #6f00ff */
+  color: #e100ff;                  /*ou #6f00ff*/
+  width: 100px;
+  height: 35px;
+  border-radius: 5px;
+  transition: 0.2s ease-in-out;     /*Transição para quando passar o mouse por cima do botão*/
+}
+
+.dc_btn:hover {         /*O "hover" dá um efeito quando passa o cursor do mouse encima do botão*/
+  cursor: pointer;
+  background-color: #ad00c4;
+  color: white;
+} 
+
+.tab_products {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  top: 0;
+  width: 100%;
+  height: 50vh;
+  background: #110020;
+}
+
+.cards {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+  height: 50%;
+}
+
+.header2 {
+  font-size: 1.8rem;
+  line-height: 2.5rem;
+  margin-top: -60px;
+  margin-bottom: 60px;
+}
+
+.header2 span {
+  color: #e560ff;
+}
+
+.card {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  width: 300px;
+  height: 200px;
+  background-color: #20002b;
+  margin: 20px;
+  border-radius: 12px;
+  box-shadow: 0 0 20px rgba(0, 0, 0, 0.1);
+}
+
+.card:hover {
+  cursor: pointer;
+}
+
+.footer {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 40px;
+  color: rgb(70, 28, 104);
+}
+
+.footer p {
+  color: #fff;
 }
