--- a/templates/home.html
+++ b/templates/home.html
@@ -24,8 +24,8 @@
         </div>
 
         <ul class="nav">
-            <li><a href="index.html">Home</a></li>
-            <li><a href="criar.produto.html">Produtos</a></li>
+            <li><a href="/home">Home</a></li>
+            <li><a href="/criar_produto">Produtos</a></li>
             <li><a href="#">Eventos</a></li>
         </ul>
 
@@ -33,8 +33,8 @@
 
     <section class="CTA">
         <div class="main-text">
-            <h1>Os Melhores Produtos do <span>Discord</span></h1>
-            <a href="#"><button class="dc_btn">Discord</button></a>
+            <h1>Os Melhores Produtos da <span>TechStore</span></h1>
+            <a href="#"><button class="dc_btn">#</button></a>
         </div>
 
     </section>
