--- a/templates/index.html
+++ b/templates/index.html
@@ -11,8 +11,10 @@
 
 <header class="botoes">
     <h1>TechStore</h1>
-    <a href="/login" class="button">Você tem uma conta?</a>
-    <a href="/cadastro" class="button">Não tem uma conta?</a>
+    <div>
+        <a href="/login" class="button">Você tem uma conta?</a>
+        <a href="/cadastro" class="button">Não tem uma conta?</a>
+    </div>
 </header>
 
 
