--- a/templates/editar.html
+++ b/templates/editar.html
@@ -1,35 +1,35 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Editar Produto</title>
     <link rel="stylesheet" href="/static/styles.css">
-    <title>Editar</title>
 </head>
 <body>
     <div class="produtos">
-        <h2>Editar Projeto</h2>
         <form action="/editar/{{produto[0]}}" method="POST">
-            <div class="form-group column">
-                <label for="nome">Alterar o Nome</label>
-                <input type="text" id="nome" name="nome" required value="{{produto[1]}}">
-        
-                <label for="preco">Alterar o Preço</label>
-                <input type="text" id="preco" name="preco" required value="{{produto[2]}}" >
-    
-                <label for="imagem">Alterar a imagem</label>
-                <input type="text" id="caminho_imagem" name="caminho_imagem" required value="{{produto[3]}}">
-                
-            </div>
-            <div class="botoes"> 
-                <button type="submit" class="btn">Concluir Edição</button>
-                <a href="/excluir_produtos/{{produto[0]}}">Excluir Produto</a>
-            </div>
-        
-            
-        </form>
-        
-    </div>
 
+            <input type="hidden" name="id" value="{{ produto.id }}">
+
+            <div class="input-box">
+              <input name="nome" type="text" placeholder="Nome do produto" value="{{ produto.nome }}">
+            </div>
+
+            <div class="input-box">
+              <input name="preco" type="number" placeholder="Preço do produto" value="{{ produto.preco }}">
+            </div>
+
+            <div class="input-box">
+              <input name="caminho_imagem" type="text" placeholder="Url da imagem" value="{{ produto.imagem }}">
+            </div>
+    </div>
+        
+        <br>
+        <div class="botoes">
+            <button type="submit" class="button concluir-edicao">Concluir Edição</button>
+            <a href="/excluir_produto/{{produto[0]}}">Excluir</a>
+        </div>
+    </form>
 </body>
 </html>
